Compile project with Java 11
JIRA: LMCROSSITXSADEPLOY-2171